# binus-aol-assessment

./: .gitignore  CMakeLists.txt  LICENSE  README.md
COMP6047001/: AOL Assessment Form - COMP6047001 - Algorithm and Programming - Odd2526.doc  csv-loader  csv-loader.c  main.c  restaurant.csv  restaurant.xlsx
